# biocurator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01/: 01-01-PLAN-SUMMARY.md  01-01-PLAN.md  01-02-PLAN-SUMMARY.md  01-02-PLAN.md  01-03-PLAN-SUMMARY.md  01-03-PLAN.md  01-PATTERNS.md  01-UAT.md  01-VERIFICATION.md  CONTEXT.md  DISCUSS-CHECKPOINT.json  RESEARCH.md  VALIDATION.md
.planning/phases/02-circuit-breaker-health-status/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-VERIFICATION.md
.planning/phases/03-checksums-manifests/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-cli-jobs-files-commands/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-PATTERNS.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
results/asfv/: asfv_metadata.json
results/covid/: sars_cov2_metadata.json
src/: _logger.py
src/biocurator/: exceptions.py  pipeline.py
tests/: test_exceptions.py
tests/cli/: test_files.py  test_init.py  test_jobs.py  test_preview.py  test_run.py  test_status.py
tests/config/: test_loader.py  test_schema.py
tests/core/: test_curator.py  test_exporter.py  test_filters.py  test_streaming_curation.py  test_verifier.py
tests/fixtures/: missing_databases.yaml  missing_email.yaml  valid_config.yaml
tests/providers/: test_base.py  test_health.py  test_ncbi.py  test_ncbi_apikey.py  test_ncbi_criteria.py  test_ncbi_query_builders.py  test_registry.py  test_sequence_record.py  test_uniprot.py
tests/utils/: test_logging.py  test_network.py
wiki/: Adding-a-Custom-Provider.md  CLI-Reference.md  Configuration.md  Examples.md  Getting-Started.md  Home.md  Installation.md  Output-Files.md  Python-API.md  Troubleshooting.md  _Sidebar.md
(+61 files in other folders)
