[project]
name = "biocurator"
version = "0.1.0"
description = "A biological dataset curation framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.87",
    "numpy>=2.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "rich>=13.0",
    "typer>=0.25.1",
    "pyyaml>=6.0",
]

[project.scripts]
biocurator = "biocurator.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biocurator"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]
