[project]
name = "biocurator"
version = "0.2.0"
description = "A config-driven framework for curating biological sequence datasets"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name = "Jan Emmanuel Samson", email = "jegsamson.dev@gmail.com" },
]
keywords = [
    "bioinformatics",
    "genomics",
    "proteomics",
    "ncbi",
    "uniprot",
    "sequence",
    "curation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "biopython>=1.87",
    "numpy>=2.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "rich>=13.0",
    "typer>=0.25.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/dagsdags212/biocurator"
Repository = "https://github.com/dagsdags212/biocurator"
Changelog = "https://github.com/dagsdags212/biocurator/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/dagsdags212/biocurator/issues"

[project.scripts]
biocurator = "biocurator.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biocurator"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.uv.workspace]
members = [
    ".",
    ".",
]

[tool.uv.sources]
biocurator = { workspace = true }

[dependency-groups]
dev = [
    "biocurator",
    "pytest>=8.0",
    "pytest-mock>=3.0",
]
